# ecg-audio-analyzer

./: .dockerignore  .env.ec2-test.example  .gitignore  API_JSON_STRUCTURE.md  ARCHITECTURE.md  BACKEND_INTEGRATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  EC2_DEPLOYMENT_GUIDE.md  EC2_GPU_TROUBLESHOOTING_REPORT.md  FRONTEND_INTEGRATION_GUIDE.md  GPU_DEPLOYMENT_STATUS.md  GPU_SETUP_GUIDE.md  LICENSE  LOCAL_TEST_GUIDE.md  MANIFEST.in  ML_SERVER_API_SPEC.md  ML_SERVER_SETUP.md  README.md  audio_analysis.json  debug.txt  deploy_to_ec2.sh  docker-compose.aws.yml  docker-compose.yml  environment.yml  fix_whisperx.py  main.py  ml_api_server.py  ml_api_server_updated.py  preload_models.py  pyproject.toml  pytest.ini  requirements-cpu.txt  requirements-docker.txt  requirements-ec2.txt  requirements-gpu.txt  requirements.txt  run_gpu_dlami.sh  run_server.py  (+6 more)
.github/workflows/: cd.yml  ci.yml
aws/: cloudformation.yml  user-data.sh
config/: aws_settings.py  base_settings.py  model_configs.py  settings.py
deployment/: aws-deploy.sh
docker/: .env.template  Dockerfile.gpu  README.md  docker-entrypoint.sh  healthcheck.sh
output/: friend2_analysis.json  friends2_analysis_Copy.json  friends_analysis.json  friends_analysis_20250830_171903.json  friends_analysis_20250830_172706.json  friends_analysis_20250830_174820.json  friends_analysis_20250830_213434.json  friends_analysis_20250831_034837.json  friends_analysis_20250831_035332.json  friends_analysis_20250831_040100.json  friends_analysis_20250831_040411.json  friends_analysis_20250901_125929.json  friends_analysis_20250901_131237.json  friends_analysis_20250901_133520.json  friends_analysis_20250901_140308.json  friends_analysis_20250901_142401.json  friends_analysis_20250901_142745.json  friends_analysis_20250901_143405.json  friends_analysis_20250901_144845.json  friends_analysis_20250901_145813.json  friends_analysis_20250901_150257.json  friends_analysis_20250901_162446.json  friends_analysis_20250901_163130.json  friends_analysis_20250901_163254.json  friends_analysis_20250901_164723.json  friends_analysis_20250901_164838.json  friends_analysis_20250901_190620.json  friends_analysis_20250901_191953.json  friends_analysis_20250901_192532.json  friends_analysis_20250901_192634.json  friends_analysis_20250901_194458.json  friends_analysis_20250901_194621.json  friends_analysis_20250901_213752.json  friends_analysis_20250901_220534.json  friends_analysis_20250901_221937.json  friends_analysis_20250901_222444.json  friends_analysis_20250901_224252.json  friends_analysis_20250901_224816.json  friends_analysis_20250901_231720.json  friends_analysis_20250901_232327.json  (+8 more)
scripts/: build_package.sh
src/: __init__.py  api.py  cli.py
src/models/: __init__.py  emotion_analyzer.py  model_manager.py  output_models.py  speaker_diarizer.py  speech_recognizer.py
src/pipeline/: __init__.py  manager.py  progress_tracker.py  resource_manager.py  stage_executor.py
src/services/: __init__.py  acoustic_analyzer.py  audio_extractor.py  callback_client.py  callback_pipeline.py  emotion_analyzer.py  result_synthesizer.py  speaker_diarizer.py
src/utils/: __init__.py  audio_cleaner.py  aws_utils.py  cpu_optimization.py  duration_validator.py  gpu_optimizer.py  logger.py  output_manager.py  performance_monitor.py  subtitle_optimizer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_duration_accuracy_integration.py  test_pipeline_integration.py
tests/unit/: __init__.py  test_audio_extractor.py  test_duration_validator.py  test_speaker_diarizer.py
